--- a/styles.css
+++ b/styles.css
@@ -12,7 +12,7 @@ body {
 }
 
 .lilita-one-regular {
-  font-family: "Lilita One", sans-serif;
+  font-family: "Birch Std", sans-serif;
   font-weight: 400;
   font-style: normal;
 }
@@ -128,3 +128,4 @@ body {
   width: 3%;
   height: 3%;
 }
+
